// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should render properly with shadow 1`] = `
.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c14 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c14 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c13 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c4 {
  flex: 1;
  padding: 0;
  margin: 0;
  list-style-type: none;
  overflow-x: hidden;
  overflow-y: auto;
}

.c4::-webkit-scrollbar {
  width: 0.5rem;
  background-color: #ffffff;
}

.c4::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #98A7B7;
}

.c12 {
  position: relative;
}

.c12>.c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  margin: 3.1rem 2.4rem 1.4rem;
  user-select: none;
  display: block;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  color: #98A7B7;
}

.c12 .c3 {
  overflow: visible;
}

.c12:not(:first-child)::before {
  content: '';
  width: calc(100% - 4rem);
  transition: width 200ms ease-out;
  margin: 0 auto;
  display: block;
  position: absolute;
  border-top: 1px solid #dfe4e9;
  top: 2.0rem;
  left: 0;
  right: 0;
}

.c5 {
  text-decoration: none;
  box-sizing: border-box;
  display: grid;
  margin: 0 1.2rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2.4rem #eff2f4;
  grid-template-columns: calc(7.2rem - 1.2rem) calc(25.6rem - 7.2rem - 1.2rem);
  justify-items: flex-start;
  align-items: center;
  user-select: none;
  min-height: 4.8rem;
  transition: all 100ms ease-out;
  cursor: pointer;
  background-color: #EBF1FA;
}

.c5 .c6 {
  overflow: visible;
  border-radius: 0.4rem;
  padding: calc((4.8rem - 2rem) / 2);
  font-size: 2rem;
}

.c5 .c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5 .c6 * {
  fill: #3872D2;
}

.c5 .c8 {
  color: #3872D2;
}

.c10 {
  text-decoration: none;
  box-sizing: border-box;
  display: grid;
  margin: 0 1.2rem;
  border-radius: 0.4rem;
  grid-template-columns: calc(7.2rem - 1.2rem) calc(25.6rem - 7.2rem - 1.2rem);
  justify-items: flex-start;
  align-items: center;
  user-select: none;
  min-height: 4.8rem;
  transition: all 100ms ease-out;
  cursor: pointer;
  background-color: transparent;
}

.c10 .c6 {
  overflow: visible;
  border-radius: 0.4rem;
  padding: calc((4.8rem - 2rem) / 2);
  font-size: 2rem;
}

.c10 .c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c10 .c6 * {
  fill: #607890;
}

.c10 .c8 {
  color: #607890;
}

.c10:hover {
  background-color: #eff2f4;
}

.c10:hover .c6 * {
  fill: #303C48;
}

.c10:hover .c8 {
  color: #303C48;
}

.c10:active {
  background-color: #dfe4e9;
}

.c10:active .c6 * {
  fill: #13181D;
}

.c10:active .c8 {
  color: #13181D;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 10;
  top: 0;
  transition: 0.2s;
  left: 0;
}

.c1 {
  position: inherit;
  transition: width 200ms ease-out;
  width: 7.2rem;
  box-shadow: 0.2rem 0 8px rgba(96, 120, 144, 0.2);
}

.c2 {
  height: 100%;
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
  overflow: hidden;
  transition: all 200ms ease-out;
  background-color: #ffffff;
  width: 7.2rem;
  box-shadow: none;
}

.c2>.c3:first-of-type {
  padding-top: 3.7rem;
}

.c2>.c3:first-of-type>.c11:first-of-type>.c8 {
  margin-top: 0.6rem;
}

.c15 {
  min-height: 7.2rem;
  flex: unset;
  display: flex;
  align-items: center;
  align-self: end;
  position: relative;
  width: 100%;
  margin-top: 2rem;
}

.c15::before {
  content: '';
  width: calc(100% - 4.0rem);
  margin: 0 auto;
  display: block;
  position: absolute;
  border-top: 1px solid #dfe4e9;
  top: 0;
  left: 0;
  right: 0;
}

<div>
  <aside
    class="c0 c1"
    id="medly-sidenav"
    position="left"
  >
    <nav
      class="c2"
    >
      <ul
        class="c3 c4"
      >
        <li
          class="c5"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Home
          </span>
        </li>
        <li
          class="c10"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.063 3.125a5.938 5.938 0 1 0 0 11.875 5.938 5.938 0 0 0 0-11.875zM1.875 9.063a7.187 7.187 0 1 1 12.692 4.621l3.375 3.374a.625.625 0 1 1-.884.884l-3.374-3.374A7.188 7.188 0 0 1 1.875 9.063z"
              fill="#606878"
              fill-rule="evenodd"
              stroke="#606878"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width=".3"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Search
          </span>
        </li>
        <li
          class="c11 c12"
        >
          <h5
            class="c8 c13"
            textalign="initial"
            textcolor="inherit"
            textvariant="h5"
          >
            Group
          </h5>
          <ul
            class="c3 c4"
          >
            <li
              class="c10"
            >
              <svg
                class="c6 c14"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
                  fill="#000"
                  fill-opacity=".54"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="c8 c9"
                textalign="initial"
                textcolor="inherit"
              >
                Transactions
              </span>
            </li>
            <li
              class="c10"
            >
              <svg
                class="c6 c14"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M19.502 12c0 .34-.03.66-.07.98l2.11 1.65c.19.15.24.42.12.64l-2 3.46c-.12.22-.38.31-.61.22l-2.49-1c-.52.39-1.08.73-1.69.98l-.38 2.65c-.03.24-.24.42-.49.42h-4c-.25 0-.46-.18-.49-.42l-.38-2.65c-.61-.25-1.17-.58-1.69-.98l-2.49 1c-.22.08-.49 0-.61-.22l-2-3.46a.505.505 0 0 1 .12-.64l2.11-1.65a7.93 7.93 0 0 1-.07-.98c0-.33.03-.66.07-.98l-2.11-1.65a.493.493 0 0 1-.12-.64l2-3.46c.12-.22.38-.31.61-.22l2.49 1c.52-.39 1.08-.73 1.69-.98l.38-2.65c.03-.24.24-.42.49-.42h4c.25 0 .46.18.49.42l.38 2.65c.61.25 1.17.58 1.69.98l2.49-1c.22-.08.49 0 .61.22l2 3.46c.12.22.07.49-.12.64l-2.11 1.65c.04.32.07.64.07.98zm-11 0c0 1.93 1.57 3.5 3.5 3.5s3.5-1.57 3.5-3.5-1.57-3.5-3.5-3.5-3.5 1.57-3.5 3.5z"
                  fill="#000"
                  fill-opacity=".54"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="c8 c9"
                textalign="initial"
                textcolor="inherit"
              >
                Settings
              </span>
            </li>
          </ul>
        </li>
      </ul>
      <ul
        class="c3 c4 c15"
      >
        <li
          class="c10"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            id="medly-sidenav-toggle-expand"
            title="medly-sidenav-toggle-expand"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.111 6H1.89C1.4 6 1 6.45 1 7s.4 1 .889 1H16.11C16.6 8 17 7.55 17 7s-.4-1-.889-1zM16.111 11H1.89C1.4 11 1 11.45 1 12s.4 1 .889 1H16.11c.489 0 .889-.45.889-1s-.4-1-.889-1zM17 17c0-.55-.4-1-.889-1H1.89C1.4 16 1 16.45 1 17s.4 1 .889 1H16.11c.489 0 .889-.45.889-1zM20.176 15.211l2.537-2.525a.967.967 0 0 0 0-1.374l-2.537-2.525c-.618-.615-1.676-.176-1.676.692v5.05c0 .867 1.058 1.296 1.676.682z"
              fill="#000"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Open Menu
          </span>
        </li>
      </ul>
    </nav>
  </aside>
</div>
`;

exports[`SideNav should render properly without shadow 1`] = `
.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c14 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c14 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c13 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c4 {
  flex: 1;
  padding: 0;
  margin: 0;
  list-style-type: none;
  overflow-x: hidden;
  overflow-y: auto;
}

.c4::-webkit-scrollbar {
  width: 0.5rem;
  background-color: #ffffff;
}

.c4::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #98A7B7;
}

.c12 {
  position: relative;
}

.c12>.c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  margin: 3.1rem 2.4rem 1.4rem;
  user-select: none;
  display: block;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  color: #98A7B7;
}

.c12 .c3 {
  overflow: visible;
}

.c12:not(:first-child)::before {
  content: '';
  width: calc(100% - 4rem);
  transition: width 200ms ease-out;
  margin: 0 auto;
  display: block;
  position: absolute;
  border-top: 1px solid #dfe4e9;
  top: 2.0rem;
  left: 0;
  right: 0;
}

.c5 {
  text-decoration: none;
  box-sizing: border-box;
  display: grid;
  margin: 0 1.2rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2.4rem #eff2f4;
  grid-template-columns: calc(7.2rem - 1.2rem) calc(25.6rem - 7.2rem - 1.2rem);
  justify-items: flex-start;
  align-items: center;
  user-select: none;
  min-height: 4.8rem;
  transition: all 100ms ease-out;
  cursor: pointer;
  background-color: #EBF1FA;
}

.c5 .c6 {
  overflow: visible;
  border-radius: 0.4rem;
  padding: calc((4.8rem - 2rem) / 2);
  font-size: 2rem;
}

.c5 .c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5 .c6 * {
  fill: #3872D2;
}

.c5 .c8 {
  color: #3872D2;
}

.c10 {
  text-decoration: none;
  box-sizing: border-box;
  display: grid;
  margin: 0 1.2rem;
  border-radius: 0.4rem;
  grid-template-columns: calc(7.2rem - 1.2rem) calc(25.6rem - 7.2rem - 1.2rem);
  justify-items: flex-start;
  align-items: center;
  user-select: none;
  min-height: 4.8rem;
  transition: all 100ms ease-out;
  cursor: pointer;
  background-color: transparent;
}

.c10 .c6 {
  overflow: visible;
  border-radius: 0.4rem;
  padding: calc((4.8rem - 2rem) / 2);
  font-size: 2rem;
}

.c10 .c8 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c10 .c6 * {
  fill: #607890;
}

.c10 .c8 {
  color: #607890;
}

.c10:hover {
  background-color: #eff2f4;
}

.c10:hover .c6 * {
  fill: #303C48;
}

.c10:hover .c8 {
  color: #303C48;
}

.c10:active {
  background-color: #dfe4e9;
}

.c10:active .c6 * {
  fill: #13181D;
}

.c10:active .c8 {
  color: #13181D;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 10;
  top: 0;
  transition: 0.2s;
  left: 0;
}

.c1 {
  position: inherit;
  transition: width 200ms ease-out;
  width: 7.2rem;
}

.c2 {
  height: 100%;
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
  overflow: hidden;
  transition: all 200ms ease-out;
  background-color: #ffffff;
  width: 7.2rem;
  box-shadow: none;
}

.c2>.c3:first-of-type {
  padding-top: 3.7rem;
}

.c2>.c3:first-of-type>.c11:first-of-type>.c8 {
  margin-top: 0.6rem;
}

.c15 {
  min-height: 7.2rem;
  flex: unset;
  display: flex;
  align-items: center;
  align-self: end;
  position: relative;
  width: 100%;
  margin-top: 2rem;
}

.c15::before {
  content: '';
  width: calc(100% - 4.0rem);
  margin: 0 auto;
  display: block;
  position: absolute;
  border-top: 1px solid #dfe4e9;
  top: 0;
  left: 0;
  right: 0;
}

<div>
  <aside
    class="c0 c1"
    id="medly-sidenav"
    position="left"
  >
    <nav
      class="c2"
    >
      <ul
        class="c3 c4"
      >
        <li
          class="c5"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Home
          </span>
        </li>
        <li
          class="c10"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.063 3.125a5.938 5.938 0 1 0 0 11.875 5.938 5.938 0 0 0 0-11.875zM1.875 9.063a7.187 7.187 0 1 1 12.692 4.621l3.375 3.374a.625.625 0 1 1-.884.884l-3.374-3.374A7.188 7.188 0 0 1 1.875 9.063z"
              fill="#606878"
              fill-rule="evenodd"
              stroke="#606878"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width=".3"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Search
          </span>
        </li>
        <li
          class="c11 c12"
        >
          <h5
            class="c8 c13"
            textalign="initial"
            textcolor="inherit"
            textvariant="h5"
          >
            Group
          </h5>
          <ul
            class="c3 c4"
          >
            <li
              class="c10"
            >
              <svg
                class="c6 c14"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
                  fill="#000"
                  fill-opacity=".54"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="c8 c9"
                textalign="initial"
                textcolor="inherit"
              >
                Transactions
              </span>
            </li>
            <li
              class="c10"
            >
              <svg
                class="c6 c14"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M19.502 12c0 .34-.03.66-.07.98l2.11 1.65c.19.15.24.42.12.64l-2 3.46c-.12.22-.38.31-.61.22l-2.49-1c-.52.39-1.08.73-1.69.98l-.38 2.65c-.03.24-.24.42-.49.42h-4c-.25 0-.46-.18-.49-.42l-.38-2.65c-.61-.25-1.17-.58-1.69-.98l-2.49 1c-.22.08-.49 0-.61-.22l-2-3.46a.505.505 0 0 1 .12-.64l2.11-1.65a7.93 7.93 0 0 1-.07-.98c0-.33.03-.66.07-.98l-2.11-1.65a.493.493 0 0 1-.12-.64l2-3.46c.12-.22.38-.31.61-.22l2.49 1c.52-.39 1.08-.73 1.69-.98l.38-2.65c.03-.24.24-.42.49-.42h4c.25 0 .46.18.49.42l.38 2.65c.61.25 1.17.58 1.69.98l2.49-1c.22-.08.49 0 .61.22l2 3.46c.12.22.07.49-.12.64l-2.11 1.65c.04.32.07.64.07.98zm-11 0c0 1.93 1.57 3.5 3.5 3.5s3.5-1.57 3.5-3.5-1.57-3.5-3.5-3.5-3.5 1.57-3.5 3.5z"
                  fill="#000"
                  fill-opacity=".54"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="c8 c9"
                textalign="initial"
                textcolor="inherit"
              >
                Settings
              </span>
            </li>
          </ul>
        </li>
      </ul>
      <ul
        class="c3 c4 c15"
      >
        <li
          class="c10"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            id="medly-sidenav-toggle-expand"
            title="medly-sidenav-toggle-expand"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.111 6H1.89C1.4 6 1 6.45 1 7s.4 1 .889 1H16.11C16.6 8 17 7.55 17 7s-.4-1-.889-1zM16.111 11H1.89C1.4 11 1 11.45 1 12s.4 1 .889 1H16.11c.489 0 .889-.45.889-1s-.4-1-.889-1zM17 17c0-.55-.4-1-.889-1H1.89C1.4 16 1 16.45 1 17s.4 1 .889 1H16.11c.489 0 .889-.45.889-1zM20.176 15.211l2.537-2.525a.967.967 0 0 0 0-1.374l-2.537-2.525c-.618-.615-1.676-.176-1.676.692v5.05c0 .867 1.058 1.296 1.676.682z"
              fill="#000"
            />
          </svg>
          <span
            class="c8 c9"
            textalign="initial"
            textcolor="inherit"
          >
            Open Menu
          </span>
        </li>
      </ul>
    </nav>
  </aside>
</div>
`;
